<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:isScrollContainer="true"
        android:nestedScrollingEnabled="true"
        tools:context=".AddTaskActivity">

        <TextView
            android:id="@+id/nameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/nameLabel"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/dateLabel"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameLabel" />

        <TextView
            android:id="@+id/priorityLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/priorityLabel"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateInput" />

        <TextView
            android:id="@+id/progressLabel"
            android:layout_width="101dp"
            android:layout_height="30dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/progressLabel"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <TextView
            android:id="@+id/estimateLabel"
            android:layout_width="133dp"
            android:layout_height="62dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:text="@string/estimateLabel"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressInput"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="0dp"
            android:layout_height="60sp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/estimateLabel"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/nameInput"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="150dp"
            android:layout_marginEnd="24dp"
            android:ems="10"
            android:hint="@string/nameHelper"
            android:inputType="text"
            android:minHeight="48dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintBaseline_toBaselineOf="@+id/nameLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextContrastCheck" />

        <SeekBar
            android:id="@+id/progressInput"
            style="@style/Widget.AppCompat.SeekBar"
            android:layout_width="0dp"
            android:layout_height="53dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="24dp"
            android:progress="1"
            android:progressTint="#EA1717"
            android:thumb="@drawable/ic_baseline_arrow_forward_ios_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressLabel" />

        <EditText
            android:id="@+id/estimateInput"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="24dp"
            android:ems="10"
            android:hint="@string/estimateHelper"
            android:inputType="numberDecimal"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintBottom_toBottomOf="@+id/estimateLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/estimateLabel"
            app:layout_constraintTop_toTopOf="@+id/estimateLabel" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="385dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/priorityLabel">

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/low"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mid"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/high"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        </RadioGroup>

        <DatePicker
            android:id="@+id/dateInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameInput" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

