<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/popup_window_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/popup_window_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="3dp"
        app:cardElevation="0dp"
        app:cardMaxElevation="0dp"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/popupContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:background="#A6AED5"
            android:minHeight="170dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/label_popup"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:background="#697ACC"
                android:gravity="center"
                android:text="@string/popUpText"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:autoSizeMaxTextSize="24dp"
                app:autoSizeTextType="uniform"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <Button
                android:id="@+id/button_yes"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="#851635"
                android:text="@string/yes"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/button_no"
                app:layout_constraintEnd_toStartOf="@+id/button_no"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/button_no"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_marginEnd="8dp"
                android:background="#851635"
                android:text="@string/no"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/button_yes"
                app:layout_constraintTop_toBottomOf="@+id/label_popup" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
